--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
 
     <div class="container">
         <h1 class="mbr-section-title mbr-fonts-style align-right mbr-bold mbr-white display-1">
-            <strong>Mobirise AMP</strong>
+            <strong>Kan Grubuna Göre Karakter Özellikleri</strong>
         </h1>
         <h3 class="mbr-section-subtitle mbr-fonts-style align-right mbr-white mbr-light display-2">
             Accelerate your site with AMP
