--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
             <strong>Kan Grubuna Göre Karakter Özellikleri</strong>
         </h1>
         <h3 class="mbr-section-subtitle mbr-fonts-style align-right mbr-white mbr-light display-2">
-            Accelerate your site with AMP
+            Kan gruplarının insanların karakterini belirlemekte etkili olduğunu biliyor musunuz?
         </h3>
         
         <div class="mbr-section-btn align-right">
