--- a/index.html
+++ b/index.html
@@ -47,8 +47,22 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
 
     <div class="container">
         <div class="mbr-text align-center mbr-fonts-style mbr-light display-7">
-            Yapılan araştırmalara göre kişinin kan grubu karakterinin şekillenmesinde etkilidir. <strong>Kan grubuna göre kişilik özellikleri</strong> belirlenerek insanlar küçük yaşlarda yönlendiriliyor. Özellikle zayıf olan yönlerinin üstüne gidilerek karakterinin daha pozitif anlamda şekillenmesi sağlanıyor. Sadece kan grubuna bakarak kişinin sahip olduğu karakterin güçlü ve zayıf yönlerini belirlemek mümkündür.</div>
-    </div>
+       
+          Yapılan araştırmalara göre kişinin kan grubu karakterinin şekillenmesinde etkilidir. <strong>Kan grubuna göre kişilik özellikleri</strong> belirlenerek insanlar küçük yaşlarda yönlendiriliyor. Özellikle zayıf olan yönlerinin üstüne gidilerek karakterinin daha pozitif anlamda şekillenmesi sağlanıyor. Sadece kan grubuna bakarak kişinin sahip olduğu karakterin güçlü ve zayıf yönlerini belirlemek mümkündür.</div>
+    
+  <strong>Quick Navigation</strong>
+<ol>
+ <li><a href="#page-level-indexing">Using meta robots</a></li>
+ <li><a href="#x-robots-tag">Using X-Robots-Tag</a></li>
+ <li><a href="#robots.txt">Set crawl directives in robots.txt</a></li>
+ <li><a href="#testing">Test robots.txt</a></li>
+ <li><a href="#removing-content">Removing content via Google Search Console</a></li>
+ <li><a href="#examples">Real life examples QA</a></li>
+</ol>
+  
+  
+  
+  </div>
 </section>
 
 
@@ -76,6 +90,12 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
 <section class="footer1 cid-ri8LIkQlbu" id="footer1-5">
 <div class="container"><div class="mbr-col-sm-12 align-center mbr-white"><p class="mbr-text mbr-fonts-style display-7">© Kan grubuna göre karakter özellikleri</p></div></div>
 </section>
+  
+  
+  
+  İÇERİKLER KISMI
+  
+  <h2 id="page-level-indexing">Setting page level indexing directives with meta robots</h2>
 
 
   
