--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
     
   <strong>Quick Navigation</strong>
 <ol>
- <li><a href="#page-level-indexing">Using meta robots</a></li>
+ <li><a href="#page-level-indexing">A Kan Grubu Kişilik Özellikleri</a></li>
  <li><a href="#x-robots-tag">Using X-Robots-Tag</a></li>
  <li><a href="#robots.txt">Set crawl directives in robots.txt</a></li>
  <li><a href="#testing">Test robots.txt</a></li>
