--- a/index.html
+++ b/index.html
@@ -47,8 +47,20 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
 
     <div class="container">
         <div class="mbr-text align-center mbr-fonts-style mbr-light display-7">
-            Yapılan araştırmalara göre kişinin kan grubu karakterinin şekillenmesinde etkilidir. <strong>Kan grubuna göre kişilik özellikleri</strong> belirlenerek insanlar küçük yaşlarda yönlendiriliyor. Özellikle zayıf olan yönlerinin üstüne gidilerek karakterinin daha pozitif anlamda şekillenmesi sağlanıyor. Sadece kan grubuna bakarak kişinin sahip olduğu karakterin güçlü ve zayıf yönlerini belirlemek mümkündür.<br><br>Sizler de kan grubunuza göre karakterinizin ne yönde şekillendiğini öğrenebilirsiniz. Kan gruplarıyla alakalı bilgilere ulaştıkça kendinizden bir şeyleri bulacağınızı düşünüyoruz.<br><br>A Kan Grubu Kişilik Özellikleri<br>B Kan Grubu Kişilik Özellikleri<br>AB Kan Grubu Karakter Özellikleri<br>0 Kan Grubu Karakter Özellikleri<br></div>
-    </div>
+Yapılan araştırmalara göre kişinin kan grubu karakterinin şekillenmesinde etkilidir. <strong>Kan grubuna göre kişilik özellikleri</strong> belirlenerek insanlar küçük yaşlarda yönlendiriliyor. Özellikle zayıf olan yönlerinin üstüne gidilerek karakterinin daha pozitif anlamda şekillenmesi sağlanıyor. Sadece kan grubuna bakarak kişinin sahip olduğu karakterin güçlü ve zayıf yönlerini belirlemek mümkündür.<br><br>Sizler de kan grubunuza göre karakterinizin ne yönde şekillendiğini öğrenebilirsiniz. Kan gruplarıyla alakalı bilgilere ulaştıkça kendinizden bir şeyleri bulacağınızı düşünüyoruz.<br><br>A Kan Grubu Kişilik Özellikleri<br>B Kan Grubu Kişilik Özellikleri<br>AB Kan Grubu Karakter Özellikleri<br>0 Kan Grubu Karakter Özellikleri<br></div>
+
+  <strong>Quick Navigation</strong>
+<ol>
+ <li><a href="#page-level-indexing">Using meta robots</a></li>
+ <li><a href="#x-robots-tag">Using X-Robots-Tag</a></li>
+ <li><a href="#robots.txt">Set crawl directives in robots.txt</a></li>
+ <li><a href="#testing">Test robots.txt</a></li>
+ <li><a href="#removing-content">Removing content via Google Search Console</a></li>
+ <li><a href="#examples">Real life examples QA</a></li>
+</ol>
+  
+  
+  </div>
 </section>
 
 <section class="content2 mbr-section article cid-rigmmEYaOv" id="content2-d">
