--- a/index.html
+++ b/index.html
@@ -51,12 +51,10 @@ Yapılan araştırmalara göre kişinin kan grubu karakterinin şekillenmesinde 
 
   <strong>Quick Navigation</strong>
 <ol>
- <li><a href="#page-level-indexing">Using meta robots</a></li>
- <li><a href="#x-robots-tag">Using X-Robots-Tag</a></li>
- <li><a href="#robots.txt">Set crawl directives in robots.txt</a></li>
- <li><a href="#testing">Test robots.txt</a></li>
- <li><a href="#removing-content">Removing content via Google Search Console</a></li>
- <li><a href="#examples">Real life examples QA</a></li>
+ <li><a href="#a-kan-grubu">A kan grubu karakter özellikleri</a></li>
+ <li><a href="#b-kan-grubu">B kan grubu karakter özellikleri</a></li>
+ <li><a href="#ab-kan-grubu">AB kan grubu kişilik özellikleri</a></li>
+ <li><a href="#0-kan-grubu">0 kan grubu kişilik özellikleri</a></li>
 </ol>
   
   
@@ -64,13 +62,10 @@ Yapılan araştırmalara göre kişinin kan grubu karakterinin şekillenmesinde 
 </section>
 
 <section class="content2 mbr-section article cid-rigmmEYaOv" id="content2-d">
-    
-     
-
-    <div class="container">
-        <div class="mbr-row mbr-justify-content-center">
-            <div class="mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-8">
-                <h3 id="page-level-indexing"; class="mbr-fonts-style mbr-section-title mbr-light display-2"><strong>A Kan Grubu Kişilik Özellikleri</strong></h3>
+<div class="container">
+<div class="mbr-row mbr-justify-content-center">
+<div class="mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-8">
+<h3 id="a-kan-grubu"; class="mbr-fonts-style mbr-section-title mbr-light display-2"><strong>A Kan Grubu Kişilik Özellikleri</strong></h3>
                 <p class="mbr-text mbr-fonts-style display-7">
                     <strong> Make your own website in a few clicks!</strong> Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. Mobirise Website Builder creates responsive, retina and <em> mobile friendly websites</em> in a few clicks. Mobirise is one of the easiest website development tools <a href="https://mobirise.co/">available</a> today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.
                 </p>
@@ -86,7 +81,7 @@ Yapılan araştırmalara göre kişinin kan grubu karakterinin şekillenmesinde 
     <div class="container">
         <div class="mbr-row mbr-justify-content-center">
             <div class="mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-8">
-                <h3 class="mbr-fonts-style mbr-section-title mbr-light display-2"><strong>B Kan Grubu Kişilik Özellikleri
+                <h3 id="b-kan-grubu"; class="mbr-fonts-style mbr-section-title mbr-light display-2"><strong>B Kan Grubu Kişilik Özellikleri
 </strong></h3>
                 <p class="mbr-text mbr-fonts-style display-7">
                     <strong> Make your own website in a few clicks!</strong> Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. Mobirise Website Builder creates responsive, retina and <em> mobile friendly websites</em> in a few clicks. Mobirise is one of the easiest website development tools <a href="https://mobirise.co/">available</a> today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.
@@ -103,7 +98,7 @@ Yapılan araştırmalara göre kişinin kan grubu karakterinin şekillenmesinde 
     <div class="container">
         <div class="mbr-row mbr-justify-content-center">
             <div class="mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-8">
-                <h3 class="mbr-fonts-style mbr-section-title mbr-light display-2"><strong>AB Kan Grubu Karakter Özellikleri</strong></h3>
+                <h3 id="ab-kan-grubu"; class="mbr-fonts-style mbr-section-title mbr-light display-2"><strong>AB Kan Grubu Karakter Özellikleri</strong></h3>
                 <p class="mbr-text mbr-fonts-style display-7">
                     <strong> Make your own website in a few clicks!</strong> Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. Mobirise Website Builder creates responsive, retina and <em> mobile friendly websites</em> in a few clicks. Mobirise is one of the easiest website development tools <a href="https://mobirise.co/">available</a> today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.
                 </p>
@@ -119,7 +114,7 @@ Yapılan araştırmalara göre kişinin kan grubu karakterinin şekillenmesinde 
     <div class="container">
         <div class="mbr-row mbr-justify-content-center">
             <div class="mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-8">
-                <h3 class="mbr-fonts-style mbr-section-title mbr-light display-2"><strong>0 Kan Grubu Karakter Özellikleri</strong></h3>
+                <h3 id="0-kan-grubu"; class="mbr-fonts-style mbr-section-title mbr-light display-2"><strong>0 Kan Grubu Karakter Özellikleri</strong></h3>
                 <p class="mbr-text mbr-fonts-style display-7">
                     <strong> Make your own website in a few clicks!</strong> Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. Mobirise Website Builder creates responsive, retina and <em> mobile friendly websites</em> in a few clicks. Mobirise is one of the easiest website development tools <a href="https://mobirise.co/">available</a> today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.
                 </p>
