--- a/index.html
+++ b/index.html
@@ -58,7 +58,10 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
  <li><a href="#b-kan-grubu">B kan grubu karakter özellikleri</a></li>
  <li><a href="#ab-kan-grubu">AB kan grubu kişilik özellikleri</a></li>
  <li><a href="#0-kan-grubu">0 kan grubu kişilik özellikleri</a></li>
+ <li><a href="#gercek-kan-grubu-ozellikleri">Kan grubuna göre karakter özellikleri gerçek mi?</a></li>
 </ol>
+      
+      
   
   
   </div>
@@ -133,7 +136,7 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
     <div class="container">
         <div class="mbr-row mbr-justify-content-center">
             <div class="mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-8">
-                <h3 class="mbr-fonts-style mbr-section-title mbr-light display-2"><strong>
+                <h3 id="gercek-kan-grubu-ozellikleri"; class="mbr-fonts-style mbr-section-title mbr-light display-2"><strong>
                     Kan Grubuna Göre Karakter Özellikleri Gerçek Mi?</strong></h3>
                 <p class="mbr-text mbr-fonts-style display-7">Japon bilim adamlarının yaptığı araştırmaya göre <a href="https://www.bilgitimi.com/kan-grubuna-gore-karakter-ozellikleri.html" target="_blank">kan grubuna göre karakter özellikleri</a> belirlenebilir. Farklı kan grubundan olan insanlar üstünde yapılan araştırma sonucunda aynı kan grubunda olan kişilerin %92'lik bölümü aynı karakter özelliklerini taşıyor. %92'lik değer akn grubuna göre karakter özelliklerinin gerçek olduğunu kanıtlar niteliktedir.</p>
             </div>
