--- a/index.html
+++ b/index.html
@@ -73,7 +73,9 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
 <div class="mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-8">
 <h3 id="a-kan-grubu"; class="mbr-fonts-style mbr-section-title mbr-light display-2"><strong>A Kan Grubu Kişilik Özellikleri</strong></h3>
                 <p class="mbr-text mbr-fonts-style display-7">
-                    <strong> Make your own website in a few clicks!</strong> Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. Mobirise Website Builder creates responsive, retina and <em> mobile friendly websites</em> in a few clicks. Mobirise is one of the easiest website development tools <a href="https://mobirise.co/">available</a> today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.
+                  
+                  Topluma uyum sağlama yetenekleri gelişmiştir. Çevresel sorunlara karşı güçlüdürler. Her zaman meydana gelen olumsuzluklara karşı dik durmayı bilirler. <br><br>A kan grubunda olan kişilerin hisleri diğer kan grubunda olan kişilere göre daha gelişmiştir. A kan grubunda olan kişiler olayları ayrıntılarıyla incelemeyi sever. Bu yönleri araştırmacı bir kişiliğe sahip olmalarını sağlamıştır. Bu özelliğinden dolayı dünya genelinde yer alan bilim insanlarının büyük bölümünün A kan grubu kana sahip olduğu söylenebilir.<br><br>Bu kan grubundakiler çevreye duyarlı olduğu için tüm olumsuzluklardan etkilenirler. Dayanma güçleri bittiği zaman biranda çaresiz bir kişiliğe bürünebilirler. <br><br> A kan grubunda olan kişilerin en olumsuz özelliği aşırı derecede paylaşımcı olmalarıdır. Tüm mallarını gözünü kırpmadan sevdikleri için paylaşabilirler. İyi niyetleri zarar görmelerine neden olabilmektedir.
+                  
                 </p>
             </div>
         </div>
