--- a/index.html
+++ b/index.html
@@ -52,10 +52,10 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
           
 <strong>Navigation</strong>
 <ol>
- <li><a href="#a-kan-grubu">A kan grubu karakter özellikleri</a></li>
- <li><a href="#b-kan-grubu">B kan grubu karakter özellikleri</a></li>
- <li><a href="#ab-kan-grubu">AB kan grubu kişilik özellikleri</a></li>
- <li><a href="#0-kan-grubu">0 kan grubu kişilik özellikleri</a></li>
+ <li><a href="#a-kan-grubu">A kan grubu kişilik özellikleri</a></li>
+ <li><a href="#b-kan-grubu">B kan grubu kişilik özellikleri</a></li>
+ <li><a href="#ab-kan-grubu">AB kan grubu karakter özellikleri</a></li>
+ <li><a href="#0-kan-grubu">0 kan grubu karakter özellikleri</a></li>
  <li><a href="#gercek-kan-grubu-ozellikleri">Kan grubuna göre karakter özellikleri gerçek mi?</a></li>
 </ol>
       
@@ -90,8 +90,8 @@ body{font-family: Roboto;}blockquote{border-color: #4ea2e3;}.display-1{font-fami
                 <h3 id="b-kan-grubu"; class="mbr-fonts-style mbr-section-title mbr-light display-2"><strong>B Kan Grubu Kişilik Özellikleri
 </strong></h3>
                 <p class="mbr-text mbr-fonts-style display-7">
-                    <strong> Make your own website in a few clicks!</strong> Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. Mobirise Website Builder creates responsive, retina and <em> mobile friendly websites</em> in a few clicks. Mobirise is one of the easiest website development tools <a href="https://mobirise.co/">available</a> today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.
-                </p>
+Karar almakta zorlanan kişilerin büyük bölümü B kan grubuna sahiptir. Toplumla uyumları iyidir ancak bu uyumun A kan grubu kadar başarılı olmadığı söylenebilir. <br><br>B kan grubunda olan kişiler olaylara akılcı bir bakış açısıyla yaklaşmayı tercih eder. Üstünde çalıştıkları iş ne kadar zor olursa olsun her zaman kararlı davranırlar. En önemli özellikleri arasında sabırlı olmaları yer alır. <br><br>B kan grubunda olan kişilerine en güzel özelliği etrafındaki kişilerden etkilenmemeleridir. El ne der düşünmek yerine her zaman kendi düşünceleriyle hareket ederler. Bu özellikleri nedeniyle liderlik vasıflarının olduğu söylenebilir. <br><br> Dünya genelinde başarılarıyla ön plana çıkan yöneticilerin büyük bölümü B kan grubuna sahipti. Sert mizaca sahip olan bu kişiler doğuştan yönetici vasfına sahiptirler.
+              </p>
             </div>
         </div>
     </div>
