--- a/index.html
+++ b/index.html
@@ -106,8 +106,8 @@ Karar almakta zorlanan kişilerin büyük bölümü B kan grubuna sahiptir. Topl
             <div class="mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-8">
                 <h3 id="ab-kan-grubu"; class="mbr-fonts-style mbr-section-title mbr-light display-2"><strong>AB Kan Grubu Karakter Özellikleri</strong></h3>
                 <p class="mbr-text mbr-fonts-style display-7">
-                    <strong> Make your own website in a few clicks!</strong> Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. Mobirise Website Builder creates responsive, retina and <em> mobile friendly websites</em> in a few clicks. Mobirise is one of the easiest website development tools <a href="https://mobirise.co/">available</a> today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.
-                </p>
+AB kan grubunda olan kişiler hem A hem B kan grubunun sahip olduğu karakter özelliklerinin büyük bölümünü içerisinde barındırır.  A ve B kan gruplarının karışımından oluştuğu için kararsız oldukları söylenebilir. <br><br>AB kan grubunda olanların en göze batan özellikleri sabırsız ve disiplinsiz olmalarıdır. Ayrıca büyük oranda kaprisli oldukları da söylenebilir. Tutarsız olmalarından dolayı kimi zaman sosyal yaşamda başarısız olurlar. <br><br>AB kan grubunda olan kişiler hiçbir olayda detaylara dalmaz. Her zaman üstün körü düşünmeyi tercih ederler. Dünyada en nadir bulunan kan grubu AB kan grubudur. 
+              </p>
             </div>
         </div>
     </div>
