--- a/index.html
+++ b/index.html
@@ -122,8 +122,8 @@ AB kan grubunda olan kişiler hem A hem B kan grubunun sahip olduğu karakter ö
             <div class="mbr-col-sm-12 mbr-col-md-10 mbr-col-lg-8">
                 <h3 id="0-kan-grubu"; class="mbr-fonts-style mbr-section-title mbr-light display-2"><strong>0 Kan Grubu Karakter Özellikleri</strong></h3>
                 <p class="mbr-text mbr-fonts-style display-7">
-                    <strong> Make your own website in a few clicks!</strong> Mobirise helps you cut down development time by providing you with a flexible website editor with a drag and drop interface. Mobirise Website Builder creates responsive, retina and <em> mobile friendly websites</em> in a few clicks. Mobirise is one of the easiest website development tools <a href="https://mobirise.co/">available</a> today. It also gives you the freedom to develop as many websites as you like given the fact that it is a desktop app.
-                </p>
+0 kan grubunda olan kişiler yaşanan tüm olumsuzluklarda dik durabilir. Özgüvenli ve dayanıklı olmalarıyla bilinirler. Cesaretli oldukları kadar iyimser oldukları da söylenebilir. <br><br>Topluma en iyi uyum sağlayan kan grubu 0 kan grubudur. Hayatı pek umursamasalar da dünyanın nimetlerinden yararlanmayı kesinlikle iyi bilirler. <br><br>Topluma iyi ayak uydurduklarından dolayı iletişimlerinin iyi olduğu söylenebilir. Liderlik özellikleri vardır. Bu özellikleri sayesinde ortamın tüm imkanlarından yararlanabilirler.
+              </p>
             </div>
         </div>
     </div>
