--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html amp>
 <head>
-
+<meta name="google-site-verification" content="bN0aek34oCXRBNpSONhKIGvrvMNR2VYjAYo76-wZUqA" />
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1, minimum-scale=1">
